# interview_to_saber

./: CMakeLists.txt  README.md  lib.hpp  main.cpp
.github/workflows/: cmake-single-platform.yml
